--- a/model_inputs.yml
+++ b/model_inputs.yml
@@ -1,15 +1,38 @@
-hrs: 8760
+# If csv data will be used, update n_hrs before running construct_yaml_input_quantities
+n_hrs: 8760
+
+##### IO #####
 print_results: True
 write_output_file: True
 
+##### 1.COP #####
+## Inputs
 cold_temperature_available: {val: 50.0, unit: 'degC', unc: 1.0, hourly: True}
+hot_temperature_desired: {val: 160.0, unit: 'degC', hourly: True}
+
+second_law_efficiency: {val: 0.5, unit: 'dimensionless'}
+# If the refrigerant selection process fails, the flag is changed to true so that it can be automatically analyzed post processing
+second_law_efficiency_flag: True
+
+t_crit_delta: {val: 30, unit: 'delta_degC'}
+min_p_crit: {val: 1.0e9, unit: 'Pa'}
+
+# The hot and cold buffer are the temperature difference between the working fluid and the hot and cold streams, a measure of the heat exchanger efficiency
 cold_buffer: {val: 5.0, unit: 'delta_degC', hourly: True}
+hot_buffer: {val: 5.0, unit: 'delta_degC', hourly: True}
+
+compressor_efficiency: {val: 0.7, unit: 'dimensionless'}
+
+refrigerant: 'R1234ze(Z)'
+refrigerant_flag: False
+
+##### 2.Energy and Mass Flow #####
+## Inputs
 cold_pressure: {val: 1.0, unit: 'atm', hourly: True}
 cold_mass_flowrate: {val: NaN, unit: 'kg/s'}
 cold_refrigerant: 'water'
+cold_deltaT: {val: 1.0, unit: 'delta_degC'}
 
-hot_temperature_desired: {val: 160.0, unit: 'degC', hourly: True}
-hot_buffer: {val: 5.0, unit: 'delta_degC', hourly: True}
 hot_pressure: {val: 1.0, unit: 'atm', hourly: True}
 hot_temperature_minimum: {val: 145.0, unit: 'degC', hourly: True}
 hot_mass_flowrate: {val: 99.0, unit: 'kg/s', hourly: True}
@@ -17,14 +40,13 @@ hot_refrigerant: 'air'
 
 process_heat_requirement: {val: NaN, unit: 'kW'}
 
-second_law_efficiency: {val: 0.5, unit: 'dimensionless'}
-compressor_efficiency: {val: 0.7, unit: 'dimensionless'}
-
-second_law_efficiency_flag: True
-refrigerant_flag: False
-refrigerant: 'R1234ze(Z)'
-
+##### 3.Heat Pump Costs #####
+## Inputs
+# 200 euro/kW -> $240/kW
+# 600 euro/kW -> $710/kW
+# 900 euro/kW -> $1070/kW
 specific_capital_cost: {val: 590.0, unit: 'USD/kW'}
+# Yearly O&M is assumed at 2.0% of capital cost
 fixed_o_and_m_per_size: {val: 11.8, unit: 'USD/kW'}
 variable_o_and_m: {val: 0.05, unit: 'USD/MMBtu'}
 lifetime: {val: 20.0, unit: 'yr'}
@@ -33,27 +55,28 @@ discount_rate: {val: 10, unit: 'percent'}
 hourly_utility_rate: {val: 0.02, unit: 'USD / kW / hr', hourly: True}
 utility_rate: {val: 10.0, unit: 'USD / kW'}
 
-gas_capital_cost_per_size: {val: 90000, unit: 'USD / (MMBtu / hr)'}
+##### 4. Natural Gas Costs #####
+## Inputs
+specific_gas_capital_cost: {val: 90000, unit: 'USD / (MMBtu / hr)'}
 gas_fixed_o_and_m_per_size: {val: 50, unit: 'USD / ((MMBtu / hr) * year)'}
 gas_variable_o_and_m_per_mmbtu: {val: 0.01, unit: 'USD / MMBtu'}
 gas_price: {val: 3.5, unit: 'USD / MMBtu', hourly: True}
 gas_efficiency: {val: 0.8, unit: 'dimensionless'}
 gas_emissions_factor: {val: 120000, unit: 'lb / MMSCF'}
 gas_emissions_volume_per_energy: {val: 9.804e-4, unit: 'MMSCF/MMBtu'}
+
+# Emissions
+carbon_price: {val: 0.0, unit: 'USD / ton'}
 gas_year_one_emissions: {val: 0.0, unit: 'ton / yr'}
+
+##### 5. Cash Flow Model #####
+kwh_CAGR: {val: 0.00, unit: 'dimensionless'}
 gas_CAGR: {val: 0.00, unit: 'dimensionless'}
 existing_gas: False
-carbon_price: {val: 0.0, unit: 'USD / ton'}
 
-kwh_CAGR: {val: 0.00, unit: 'dimensionless'}
-
+##### Future Work #####
+# Latitude and Longitude is to use the Utility Rate Database
+# Currently not used but is set to an 'industrial' electricity schedule in Oregon
 lat: 39.74077
 long: -105.16888
 schedule: 'industrial'
-
-t_crit_delta: {val: 30, unit: 'delta_degC'}
-min_p_crit: {val: 1.0e9, unit: 'Pa'}
-
-cold_dT_array: {val: 1.0, unit: 'delta_degC'}
-
-fuel_costs: {val: 0.0, unit: 'USD/hr', hourly: True}
