--- a/heatpump_model_inputs.yml
+++ b/heatpump_model_inputs.yml
@@ -43,7 +43,7 @@ hot_temperature_minimum: {val: 145.0, unit: 'degC'}
 hot_mass_flowrate: {val: 99.0, unit: 'kg/s'}
 hot_refrigerant: 'air'
 
-process_heat_requirement: {val: NaN, unit: 'kW'}
+process_heat_requirement: {val: 1.0, unit: 'MW'}
 
 ##### 3.Heat Pump Costs #####
 ## Inputs
@@ -60,19 +60,9 @@ discount_rate: {val: 10, unit: 'percent'}
 hourly_utility_rate: {val: 0.02, unit: 'USD / kW / hr'}
 utility_rate: {val: 10.0, unit: 'USD / kW'}
 
-##### 4. Natural Gas Costs #####
-## Inputs
-specific_gas_capital_cost: {val: 90000, unit: 'USD / (MMBtu / hr)'}
-gas_fixed_o_and_m_per_size: {val: 50, unit: 'USD / ((MMBtu / hr) * year)'}
-gas_variable_o_and_m_per_mmbtu: {val: 0.01, unit: 'USD / MMBtu'}
-gas_price: {val: 3.5, unit: 'USD / MMBtu'}
-gas_efficiency: {val: 0.8, unit: 'dimensionless'}
-gas_emissions_factor: {val: 120000, unit: 'lb / MMSCF'}
-gas_emissions_volume_per_energy: {val: 9.804e-4, unit: 'MMSCF/MMBtu'}
-
 # Emissions
-carbon_price: {val: 0.0, unit: 'USD / ton'}
-gas_year_one_emissions: {val: 0.0, unit: 'ton / yr'}
+emissions_factor: {val: 0, unit: 'tonnes / MMBtu'}
+year_one_emissions: {val: 0.0, unit: 'ton / yr'}
 
 ##### 5. Cash Flow Model #####
 kwh_CAGR: {val: 0.00, unit: 'dimensionless'}
