Added the cashflow model with errors.

--- a/electric_model_inputs.yml
+++ b/electric_model_inputs.yml
@@ -45,6 +45,9 @@ discount_rate: {val: 10, unit: 'percent'}
 hourly_utility_rate: {val: 0.02, unit: 'USD / kW / hr'}
 utility_rate: {val: 10.0, unit: 'USD / kW'}
 
+##### 5. Cash Flow Model #####
+CAGR: {val: 0.0214, unit: 'dimensionless'}
+
 # Emissions
 emissions_factor: {val: 0.0, unit: 'ton / MMBtu'}
 year_one_emissions: {val: 0.0, unit: 'ton / yr'}
