--- a/gas_model_inputs.yml
+++ b/gas_model_inputs.yml
@@ -16,7 +16,7 @@ thermal_efficiency: {val: 0.8, unit: 'dimensionless'}
 
 ##### 2.Energy and Mass Flow #####
 ## Inputs
-process_heat_requirement: {val: 1.0, unit: 'kW'}
+process_heat_requirement: {val: 1.0, unit: 'MW'}
 
 # Working Fluid
 working_fluid: 'water'
@@ -37,17 +37,17 @@ process_heat_requirement: {val: 1.0, unit: 'MW'}
 # 200 euro/kW -> $240/kW
 # 600 euro/kW -> $710/kW
 # 900 euro/kW -> $1070/kW
-specific_capital_cost: {val: 90000, unit: 'USD / (MMBtu / hr)'}
+specific_capital_cost: {val: 900, unit: 'USD / (MMBtu / hr)'}
 fixed_o_and_m_per_size: {val: 50, unit: 'USD / (MMBtu / hr)'}
 variable_o_and_m: {val: 0.01, unit: 'USD / MMBtu'}
-gas_price: {val: 4.5, unit: 'USD / MMBtu'}
+gas_price: {val: 20.0, unit: 'USD / MMBtu'}
 lifetime: {val: 20.0, unit: 'yr'}
 discount_rate: {val: 10, unit: 'percent'}
 
 # Emissions
 emissions_factor: {val: 120000, unit: 'lb / MMSCF'}
 emissions_volume_per_energy: {val: 9.804e-4, unit: 'MMSCF/MMBtu'}
-emissions_carbon_price: {val: 1.0, unit: 'USD / ton'}
+emissions_carbon_price: {val: 0.0, unit: 'USD / ton'}
 year_one_emissions: {val: 0.0, unit: 'ton / yr'}
 
 ##### 5. Cash Flow Model #####
